--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,19 @@
+# Build output
+bin/
+obj/
 publish/
+
+# IDE
 .idea/
+.vs/
+.vscode/
+*.user
+*.suo
+
+# OS
+Thumbs.db
+Desktop.ini
+.DS_Store
+
+# Runtime files
+symbols.json
